[package]
name = "pledge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-server = {version= "0.8.0", features=["tls-rustls"]}
base64 = "0.22.1"
moka = {version="0.12.12", features=["sync"]}
rust_decimal = {version = "1.39.0", features = ["serde"]}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
sqlx = {version="0.8.6", features=["runtime-tokio", "postgres", "json", "rust_decimal", "time", "uuid"]}
time = {version = "0.3.44", features=["serde", "serde-human-readable", "macros"]}
tokio = {version="1.48.0", features=["full"]}
toml = "0.9.8"
uuid = {version = "1.19.0", features = ["serde"]}
